--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
         </div>
         <div id=calculator>
             <div id=calculator-screen>
-                <p>123456</p>
+                <p id=display></p>
             </div>
             <div id=calculator-buttons>
-                <button class=calculator-button-top value='clear'>C</button>
-                <button class=calculator-button-top value='%'>%</button>
-                <button class=calculator-button value='7'>7</button>
-                <button class=calculator-button value='8'>8</button>
-                <button class=calculator-button value='9'>9</button>
-                <button class=calculator-button value='-'>-</button>
-                <button class=calculator-button value='4'>4</button>
-                <button class=calculator-button value='5'>5</button>
-                <button class=calculator-button value='6'>6</button>
-                <button class=calculator-button value='+'>+</button>
-                <button class=calculator-button value='1'>1</button>
-                <button class=calculator-button value='2'>2</button>
-                <button class=calculator-button value='3'>3</button>
-                <button class=calculator-button value='/'>/</button>
-                <button class=calculator-button value='0'>0</button>
-                <button class=calculator-button value='.'>.</button>
-                <button class=calculator-button value='='>=</button>
-                <button class=calculator-button value='*'>*</button>
+                <button id=calculator-button-top class=clear value='clear'>C</button>
+                <button id=calculator-button-top class=operator value='%'>%</button>
+                <button id=calculator-button class=number value='7'>7</button>
+                <button id=calculator-button class=number value='8'>8</button>
+                <button id=calculator-button class=number value='9'>9</button>
+                <button id=calculator-button class=operator value='-'>-</button>
+                <button id=calculator-button class=number value='4'>4</button>
+                <button id=calculator-button class=number value='5'>5</button>
+                <button id=calculator-button class=number value='6'>6</button>
+                <button id=calculator-button class=operator value='+'>+</button>
+                <button id=calculator-button class=number value='1'>1</button>
+                <button id=calculator-button class=number value='2'>2</button>
+                <button id=calculator-button class=number value='3'>3</button>
+                <button id=calculator-button class=operator value='/'>/</button>
+                <button id=calculator-button class=number value='0'>0</button>
+                <button id=calculator-button class=number value='.'>.</button>
+                <button id=calculator-button class=equals value='='>=</button>
+                <button id=calculator-button class=operator value='*'>*</button>
             </div>
         </div>
         <div id=flex-right>
