added top screen - to do bug fix with multiple equations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </div>
         <div id=calculator>
             <div id=calculator-screen>
-                <p id=display></p>
+                <p id=display-top></p>
+                <p id=display-bot> </p>
             </div>
             <div id=calculator-buttons>
                 <button id=calculator-button-top class=clear value='clear'>C</button>
